# TypePals

./: README.md  bot.py  constants.py  models.py  pyproject.toml  setup.cfg  utils.py
.github/workflows/: main.yml
templates/: no_replies.j2  no_requests.j2  read_replies.j2  read_replies_img.j2
